--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "moment": "2.24.0",
     "react": "16.13.1",
     "react-big-calendar": "0.24.1",
+    "react-csv": "^2.0.3",
     "react-dom": "16.13.1",
     "react-modal": "^3.11.2",
     "react-scripts": "3.4.1"
