--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/pickers": "^3.2.10",
+    "date-fns": "^2.15.0",
     "moment": "2.24.0",
     "react": "16.13.1",
     "react-big-calendar": "0.24.1",
     "react-csv": "^2.0.3",
     "react-dom": "16.13.1",
-    "react-modal": "^3.11.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
